syntax = "proto3";

package room.v1;

import "google/api/annotations.proto";

option go_package = "backend/api/room/service/v1;v1";

service Room {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {}
  rpc GetRoom(GetRoomRequest) returns (GetRoomResponse) {}
  rpc ListRoomMembers(ListRoomMemberRequest) returns (ListRoomMemberResponse) {}
  rpc ListRooms(ListRoomsRequest) returns (ListRoomsResponse) {}
  rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse) {}
  rpc GetRoomSession(GetRoomSessionRequest) returns (GetRoomSessionResponse) {}
  rpc RemoveRoomSession(RemoveRoomSessionRequest) returns (RemoveRoomSessionResponse) {}
}

message CreateRoomRequest {
  string name = 1;
  bool private = 2;
  int64 host = 3;
}

message CreateRoomResponse {
  int64 id = 1;
  bool private = 2;
  string password = 3;
}

message GetRoomRequest {
  int64 id = 1;
}

message GetRoomResponse {
  int64 id = 1;
  bool private = 2;
  string password = 3;
  int64 host = 4;
  int32 memberCount = 5;
  string name = 6;
  int32 role = 7;
}

message ListRoomMemberRequest {
  int64 id = 1;
}

message RoomMember {
  int64 userId = 1;
  int32 role = 2;
  int64 joinedAt = 3;
}

message ListRoomMemberResponse {
  repeated RoomMember members = 1;
  int32 count = 2;
}

message ListRoomsRequest {
  int32 page = 1;
  int32 pageSize = 2;
  bool joined = 3;
  int64 userId = 4;
}

message ListRoomsResponse {
  repeated GetRoomResponse rooms = 1;
  int32 total = 2;
  int32 totalPages = 3;
}

message JoinRoomRequest {
  int64 id = 1;
  int64 userId = 2;
  string password = 3;
}

message JoinRoomResponse {
}

message GetRoomSessionRequest {
  int64 roomId = 1;
  int64 userId = 2;
  string selectedGame = 3;
}

message GetRoomSessionResponse {
  int64 roomId = 1;
  string endpoint = 2;
}

message RemoveRoomSessionRequest {
  int64 roomId = 1;
  string endpoint = 2;
}

message RemoveRoomSessionResponse {

}